調整格式
