# routes/posts.js
@@ -4,10 +4,10 @@ const handleErrorAsync = require('../service/handleErrorAsync');
 const { getPostController, createPostController, deletePostController, deleteAllPostController, updatePostController } = require('../controllers/postsController');
 const { requireSignIn } = require('../middlewares/authMiddleware');
 
-router.get('/', requireSignIn, handleErrorAsync(getPostController));
 router.post('/', requireSignIn, handleErrorAsync(createPostController));
+router.get('/', requireSignIn, handleErrorAsync(getPostController));
+router.patch('/:id', requireSignIn, handleErrorAsync(updatePostController));
 router.delete('/:id', requireSignIn, handleErrorAsync(deletePostController));
 router.delete('/', requireSignIn, handleErrorAsync(deleteAllPostController));
-router.patch('/:id', requireSignIn, handleErrorAsync(updatePostController));
 
 module.exports = router;
