# routes/users.js
@@ -4,10 +4,10 @@ const handleErrorAsync = require('../service/handleErrorAsync');
 const { getUserController, registerController, loginController, updatePasswordController, updateUserController } = require('../controllers/usersController');
 const { requireSignIn } = require('../middlewares/authMiddleware');
 
-router.get('/profile', requireSignIn, handleErrorAsync(getUserController));
 router.post('/sign_up', handleErrorAsync(registerController));
 router.post('/sign_in', handleErrorAsync(loginController));
 router.post('/updatePassword', requireSignIn, handleErrorAsync(updatePasswordController));
+router.get('/profile', requireSignIn, handleErrorAsync(getUserController));
 router.patch('/profile', requireSignIn, handleErrorAsync(updateUserController));
 
 module.exports = router;
